# rstr

./: AUTHORS  Makefile.am  configure.ac
code/: main.cpp
